--- a/deploy/k8s.yaml
+++ b/deploy/k8s.yaml
@@ -35,41 +35,44 @@ spec:
       serviceAccountName: node-termination-handler
       affinity:
         nodeAffinity:
-         # Restrict to GPU nodes or preemptible nodes
+          # Restrict to GPU nodes or preemptible nodes
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
-            - matchExpressions:
-              - key: cloud.google.com/gke-accelerator
-                operator: Exists
-            - matchExpressions:
-              - key: cloud.google.com/gke-preemptible
-                operator: Exists
+              - matchExpressions:
+                  - key: cloud.google.com/gke-accelerator
+                    operator: Exists
+              - matchExpressions:
+                  - key: cloud.google.com/gke-preemptible
+                    operator: Exists
       containers:
-        # TODO: Update to an official image once the build is automated via GCB.
-      - image: k8s.gcr.io/gke-node-termination-handler@sha256:aca12d17b222dfed755e28a44d92721e477915fb73211d0a0f8925a1fa847cca
-        name: node-termination-handler
-        command: ["./node-termination-handler"]
-        args: ["--logtostderr", "--exclude-pods=$(POD_NAME):$(POD_NAMESPACE)", "-v=10", "--taint=cloud.google.com/impending-node-termination::NoSchedule"]
-        securityContext:
-          capabilities:
-            # Necessary to reboot node
-            add: ["SYS_BOOT"]
-        env:
-          - name: POD_NAME
-            valueFrom:
-              fieldRef:
-                fieldPath: metadata.name
-          - name: POD_NAMESPACE
-            valueFrom:
-              fieldRef:
-                fieldPath: metadata.namespace
-        resources:
-          limits:
-            cpu: 150m
-            memory: 30Mi
+        - image: gcr.io/otsimocloud/gke-node-termination-handler:6387a44
+          name: node-termination-handler
+          command: ["./node-termination-handler"]
+          args:
+          - "--logtostderr"
+          - "--exclude-pods=$(POD_NAME):$(POD_NAMESPACE)"
+          - "-v=10"
+          - "--taint=cloud.google.com/impending-node-termination::NoSchedule"
+          env:
+            - name: POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: POD_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+            - name: POD_NODENAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: spec.nodeName
+          resources:
+            limits:
+              cpu: 20m
+              memory: 30Mi
       tolerations:
-      # Run regardless of any existing taints.
-      - effect: NoSchedule
-        operator: Exists
-      - effect: NoExecute
-        operator: Exists
+        # Run regardless of any existing taints.
+        - effect: NoSchedule
+          operator: Exists
+        - effect: NoExecute
+          operator: Exists
