update rbac rules

--- a/deploy/rbac.yaml
+++ b/deploy/rbac.yaml
@@ -33,14 +33,10 @@ rules:
 - apiGroups: [""]
   resources: ["nodes"]
   verbs: ["get", "update"]
-  # Allow Node Termination Handler to create events
-- apiGroups: [""]
-  resources: ["events"]
-  verbs: ["create"]
   # Allow Node Termination Handler to list and delete pods (for draining nodes)
 - apiGroups: [""]
   resources: ["pods"]
-  verbs: ["list", "delete"]
+  verbs: ["list", "delete", "deletecollection"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
